--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             font: 400 15px Lato, sans-serif;
             line-height: 1.8;
-            color: #818181;
+            
             background: #107Dc1;
             height: 100vh;
             text-align: center;
@@ -30,12 +30,12 @@
         }
     </style>
 </head>
-<body>
-    <div>
+<body style="background-color: #C0C0C0">
+    <div style="position: absolute; left: 260px; top: 193px">
         <a href="https://techcampus.com" style="color: #fff;text-decoration:none;"><img src="https://techcampus.com/images/logo.png" alt="logo"> TechCampus</a>
     </div>
 
-    <h1> Mohammed Asmri </h1>
-    <h1> Mohammed Asmri </h1>
+    <h1> <span style="background-color: #0000FF">Mohammed Asmri</span> </h1>
+    <h1> <span style="background-color: #FFFF00">Mohammed Asmri</span> </h1>
 </body>
 </html>
